Fix bug on iOS
Former-commit-id: 9661249793b1eefd4168e777b25e7f3177b054af

--- a/x-mnemonic-input/x-mnemonic-input.css
+++ b/x-mnemonic-input/x-mnemonic-input.css
@@ -46,11 +46,11 @@ x-mnemonic-input-field {
 x-mnemonic-input input[type="text"] {
     background-color: rgba(255, 255, 255, 0.1);
     width: 100%;
-    min-width: 4.5em;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     font-family: inherit;
     line-height: 2;
     font-size: 15px;
+    padding: 0;
 }
 
 x-mnemonic-input input[type="text"]:focus {
